few fixes with contrast and template literal strings

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -229,7 +229,7 @@ table td {
 }
 
 button {
-    background-color: var(--dark-2);
+    background-color: var(--dark-1);
     color: var(--white);
     border: none;
     border-radius: 5px;
